before I changed stuff

--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <title>Match3 prototype</title>
   </head>
   <body>
+    <div class="btnDiv">
+      <button id="matchBtn">match</button>
+      <button id="destroyBtn">destroy</button>
+      <button id="dropBtn">drop</button>
+      <button id="repopBtn">repop</button>
+    </div>
     <seciton id="gridContainer"></seciton>
-    <script src="main.js"></script>
+    <script src="new.js"></script>
   </body>
 </html>
