working with buttons for stages.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
       <button id="destroyBtn">destroy</button>
       <button id="dropBtn">drop</button>
       <button id="repopBtn">repop</button>
+      <p id="playerP">off</p>
+      <button id="playerBtn">player move</button>
     </div>
-    <seciton id="gridContainer"></seciton>
+    <div class="gridDiv">
+      <section id="gridTop"></section>
+      <seciton id="gridContainer"></seciton>
+    </div>
     <script src="new.js"></script>
   </body>
 </html>
