style work added

--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <title>Match3 prototype</title>
   </head>
   <body>
-    <div class="btnDiv">
-      <button id="matchBtn">match</button>
-      <button id="destroyBtn">destroy</button>
-      <button id="dropBtn">drop</button>
-      <button id="repopBtn">repop</button>
-      <p id="playerP">off</p>
-      <button id="playerBtn">player move</button>
-    </div>
-    <div class="gridDiv">
-      <section id="gridTop"></section>
-      <seciton id="gridContainer"></seciton>
-    </div>
-    <script src="new.js"></script>
+      <section class="topBody">
+        <div id="shipOne" class="shipDiv"></div>
+        <div id="shipTwo" class="shipDiv"></div>
+        <div id="shipThree" class="shipDiv"></div>
+      </section>
+      <section class="mainBody">
+        <div id="leftBar">
+          <div id="spritePortrait"></div>
+          <div id="dialogBox"></div>
+        </div>
+        <div id="gridContainer"></div>
+      </section>
+    <script src="main.js"></script>
   </body>
 </html>
