--- a/index.html
+++ b/index.html
@@ -8,9 +8,23 @@
   </head>
   <body>
       <section class="topBody">
+        <div id="scoreOne" class="scoreDiv"></div>
+        <div id="scoreTwo" class="scoreDiv"></div>
+        <div id="scoreThree" class="scoreDiv"></div>
+
         <div id="shipOne" class="shipDiv"></div>
         <div id="shipTwo" class="shipDiv"></div>
         <div id="shipThree" class="shipDiv"></div>
+
+        <div id="shotOne" class="shotDiv"></div>
+        <div id="shotTwo" class="shotDiv"></div>
+        <div id="shotThree" class="shotDiv"></div>
+
+        <div id="bossBig">
+          <div id="sBossOne" class="bossDiv"></div>
+          <div id="sBossTwo" class="bossDiv"></div>
+          <div id="sBossThree" class="bossDiv"></div>
+        </div>
       </section>
       <section class="mainBody">
         <div id="leftBar">
