got the bullet animations workinggit add -A

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
 
         <div id="shotOne" class="shotDiv"></div>
         <div id="shotTwo" class="shotDiv"></div>
-        <div id="shotThree" class="shotDiv"></div>
+        <div id="shotThree" class="shotDiv">
+          <!-- <div class="yellowShot"></div>
+          <div class="yellowShot"></div> -->
+        </div>
 
         <div id="bossBig">
           <div id="sBossOne" class="bossDiv"></div>
