added more animations

--- a/index.html
+++ b/index.html
@@ -24,15 +24,20 @@
         </div>
 
         <div id="bossBig">
-          <div id="sBossOne" class="bossDiv"></div>
+          <!-- <div id="sBossOne" class="bossDiv"></div>
           <div id="sBossTwo" class="bossDiv"></div>
-          <div id="sBossThree" class="bossDiv"></div>
+          <div id="sBossThree" class="bossDiv"></div> -->
         </div>
       </section>
       <section class="mainBody">
         <div id="leftBar">
-          <div id="spritePortrait"></div>
-          <div id="dialogBox"></div>
+          <div id="spritePortrait" style="background=''">
+            <!-- <div class="pilotBox" id="tempId"></div> -->
+          </div>
+          <div id="dialogBox">
+            <div id="pilotName"></div>
+            <div id="pilotSpeech"></div>
+          </div>
         </div>
         <div id="gridContainer"></div>
       </section>
