fix dialog sprites and began adding health bars to players and enemies.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   </head>
   <body>
       <section class="topBody">
+        <div id="shipHpDiv">
+          <div id="redHp"class="shipHp"></div>
+          <div id="blueHp"class="shipHp"></div>
+          <div id="yellowHp"class="shipHp"></div>
+        </div>
+
         <div id="scoreOne" class="scoreDiv"></div>
         <div id="scoreTwo" class="scoreDiv"></div>
         <div id="scoreThree" class="scoreDiv"></div>
@@ -28,6 +34,7 @@
           <div id="sBossTwo" class="bossDiv"></div>
           <div id="sBossThree" class="bossDiv"></div> -->
         </div>
+        <div id="bossHp"></div>
       </section>
       <section class="mainBody">
         <div id="leftBar">
