fixed height resizing issue

--- a/index.html
+++ b/index.html
@@ -14,19 +14,20 @@
           <div id="yellowHp"class="shipHp"></div>
         </div>
 
-        <div id="scoreOne" class="scoreDiv"></div>
-        <div id="scoreTwo" class="scoreDiv"></div>
-        <div id="scoreThree" class="scoreDiv"></div>
-
-        <div id="shipOne" class="shipDiv"></div>
-        <div id="shipTwo" class="shipDiv"></div>
-        <div id="shipThree" class="shipDiv"></div>
-
-        <div id="shotOne" class="shotDiv"></div>
-        <div id="shotTwo" class="shotDiv"></div>
-        <div id="shotThree" class="shotDiv">
-          <!-- <div class="yellowShot"></div>
-          <div class="yellowShot"></div> -->
+        <div class='shipLane' id="redLane">
+          <div id="scoreOne" class="scoreDiv"></div>
+          <div id="shipOne" class="shipDiv"></div>
+          <div id="shotOne" class="shotDiv"></div>
+        </div>
+        <div class="shipLane" id="blueLane">
+          <div id="scoreTwo" class="scoreDiv"></div>
+          <div id="shipTwo" class="shipDiv"></div>
+          <div id="shotTwo" class="shotDiv"></div>
+        </div>
+        <div class="shipLane" id="yellowLane">
+          <div id="scoreThree" class="scoreDiv"></div>
+          <div id="shipThree" class="shipDiv"></div>
+          <div id="shotThree" class="shotDiv"></div>
         </div>
 
         <div id="bossBig">
@@ -46,7 +47,7 @@
             <div id="pilotSpeech"></div>
           </div>
         </div>
-        <div id="gridContainer"></div>
+          <div id="gridContainer"></div>
       </section>
     <script src="main.js"></script>
   </body>
