before adding more content. Useless scores andpoints

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <link rel="stylesheet" href="style.css"/>
-    <title>Match3 prototype</title>
+    <title>Galactic Mismatch</title>
   </head>
   <body>
       <section class="topBody">
@@ -17,17 +17,24 @@
         <div class='shipLane' id="redLane">
           <div id="scoreOne" class="scoreDiv"></div>
           <div id="shipOne" class="shipDiv"></div>
-          <div id="shotOne" class="shotDiv"></div>
+          <div id="redShot" class="shotDiv">
+            <div class='challengeDiv'>
+              <div class="tempDiv"></div>
+              <div class='tempDiv2'>
+                <p class="challengeP">A</p>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="shipLane" id="blueLane">
           <div id="scoreTwo" class="scoreDiv"></div>
           <div id="shipTwo" class="shipDiv"></div>
-          <div id="shotTwo" class="shotDiv"></div>
+          <div id="blueShot" class="shotDiv"></div>
         </div>
         <div class="shipLane" id="yellowLane">
           <div id="scoreThree" class="scoreDiv"></div>
           <div id="shipThree" class="shipDiv"></div>
-          <div id="shotThree" class="shotDiv"></div>
+          <div id="yellowShot" class="shotDiv"></div>
         </div>
 
         <div id="bossBig">
